infrastructure/clusterDeployment/mringress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "menumaestro-ingress-mr"
  namespace: 24ws-ase-pr-qse-05
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/websocket-services: "menumaestro-mr-service"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Upgrade $http_upgrade;

spec:
  rules:
    - host: "mr.24ws-ase-pr-qse-05.apps.student.inso-w.at"
      http:
        paths:
          - path: /backend/(.*)
            pathType: Prefix
            backend:
              service:
                name: menumaestro-mr-service
                port:
                  number: 8080
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: menumaestro-mr-service
                port:
                  number: 4200
